--- a/expert/templates/expert/layouts/scientific_form.html
+++ b/expert/templates/expert/layouts/scientific_form.html
@@ -1,53 +1,51 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="fixed-back scientific_form">
-    <div class="card small-card text-right">
-        <div class="close"></div>
-        <div class="card-head">ثبت سابقه علمی</div>
-        <div class="container">
-            <form method="post" action="" class="ajax-sci-form" data-url="{% url 'expert:ajax_scientific' %}">
-                <div class="row">
-                    <div class="col-6">
+<div class="modal fade" id="newScientificRecord" tabindex="-1" role="dialog" aria-labelledby="newScientificRecordLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <form method="post" action="{% url 'expert:ajax_scientific' %}" class="ajax-sci-form">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title default text-right" id="newScientificRecordLabel">ثبت سابقه علمی</h6>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
                         <div class="row">
-                            <div class="col-lg-12">
-                                <label for="edu-section">مقطع تحصیلی</label>
-                                {{ scientific_form.degree|attr:"id:edu-section"|attr:"class:w-100" }}
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="edu-section">مقطع تحصیلی</label>
+                                    {{ scientific_form.degree|attr:"id:edu-section"|attr:"class:w-100" }}
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="edu-subject">رشته تحصیلی</label>
+                                    {{ scientific_form.major|attr:"id:edu-subject"|attr:"class:w-100" }}
+                                </div>
+                                <div class="form-group">
+                                    <label for="university">دانشگاه</label>
+                                    {{ scientific_form.university|attr:"id:university"|attr:"class:w-100" }}
+                                </div>
+                                <div class="form-group">
+                                    <label for="edu-city">شهر محل تحصیل</label>
+                                    {{ scientific_form.city|attr:"id:edu-city"|attr:"class:w-100" }}
+                                </div>
+                                <div class="form-group">
+                                    <label for="edu-year">سال اخذ مدرک</label>
+                                    {{ scientific_form.date_of_graduation|attr:"id:edu-year"|attr:"class:w-100" }}
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="edu-subject">رشته تحصیلی</label>
-                                {{ scientific_form.major|attr:"id:edu-subject"|attr:"class:w-100" }}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="university">دانشگاه</label>
-                                {{ scientific_form.university|attr:"id:university"|attr:"class:w-100" }}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="edu-city">شهر محل تحصیل</label>
-                                {{ scientific_form.city|attr:"id:edu-city"|attr:"class:w-100" }}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="edu-year">سال اخذ مدرک</label>
-                                {{ scientific_form.date_of_graduation|attr:"id:edu-year"|attr:"class:w-100" }}
+                            <div class="col-md-6 d-none d-md-flex">
+                                <img src="{% static '/img/scientific.svg' %}" alt="scientific img" class="form-image">
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 flex-display">
-                        <img src="{% static '/img/scientific.svg' %}" alt="scientific img" class="form-image">
-                    </div>
                 </div>
-                <div class="card-footer">
-                    <button class="save-btn" type="submit" >افزودن</button>
-                    <button class="reject-btn" type="reset">لغو</button>
+                <div class="modal-footer">
+                    <button type="reset" class="btn btn-secondary" data-dismiss="modal">لغو</button>
+                    <button type="submit" class="btn btn-primary mr-2">افزدون</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
